--- a/package.json
+++ b/package.json
@@ -3,10 +3,9 @@
   "version": "0.0.0",
   "private": true,
   "dependencies": {
-    "jquery": "^3.5.1",
     "react": "^16.13.1",
     "react-bootstrap": "^1.3.0",
-    "react-dom": "^16.13.1"
+    "react-dom": ">=16.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
